# diff2commit

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: install.sh
src/diff2commit/: __init__.py  cli.py  config.py  exceptions.py  git_operations.py  prompts.py  usage_tracker.py  validators.py
src/diff2commit/ai_providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py  openrouter_provider.py
src/diff2commit/ui/: __init__.py  console.py  interactive.py
tests/: conftest.py  test_config.py  test_git_operations.py
